www/css/index.css
/* ... */
body.hasDarkMode {
    background: #000;
    color: #fff;
}

/* For larger screens, let the content breathe!
 * For reference, 
 *   iPhone X is 375 x 812 (w x h)
 *   Pixel 2 XL is 411 x 823
 *   iPad is 768 x 1024
 */
 @media screen and (min-width: 500px) and (min-height: 900px)
 {
     body {
         font-size: 1.3rem;
     }
 }
 
/* Mind the iPhone X gap */
@media screen and (orientation: portrait) {
    body {
        padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
        padding-top: env(safe-area-inset-top); /* iOS 11.2 */
    }
}

@media screen and (orientation: landscape) {
    body {
        padding-top: 0;
    }
}

.page {
    /* Make the page *look* like a page */
    background-color: #f7f7f7;
    padding: 1em;

    /* The following CSS rules work in conjunction with a javascript function that
     * will change the `position` from `relative` (default) to `absolute`.
     */

    /* When position is absolute, this element will shrink-to-fit horizontally.
     * That looks weird, so force this element to grow-to-fit horizontally.
     */
    width: 100%;
    width: -webkit-fill-available;
    width: -moz-fill-available;
    width: fill-available;

    /* We don't want the content to be too wide, so this is a safety check. */
    max-width: calc(1000px - 2em);

    /* Let the content breathe! */
    line-height: 1.8;

    /*
     * The javascript function sets the `top` dynamically.
     * The `bottom` is always `0`; this avoids setting `height` explicitly.
     * This approach is resize-friendly (e.g., for a desktop browser).
     */
    bottom: 0;

    /* This forces content to scroll within the `.page` element. Without this, the content would scroll over the nav. */
    overflow-y: auto;
    
    /* Use floaty/touch scrolling */
    -webkit-overflow-scrolling: touch;

    /* When scrolling to the bottom of the page, do not pull down (overscroll/rubberband) the entire body/screen.
     * Note: This property is set to `none` for the body.
     * See: https://developers.google.com/web/updates/2017/11/overscroll-behavior
     */
    overscroll-behavior: contain;
}

body.hasDarkMode .page {
    background-color: #000;
}

/* `width: fill-available` does not have great support yet, so use this class instead. */
.fill-available {
    width: 100%;
    width: -webkit-fill-available;
    width: -moz-fill-available;
    width: fill-available;
    /* This `max-width` seems to fix an issue where an image 
     * will overflow when its pre-styled width is wider than its container.
     */
    max-width: 100%;
}

/* button-group is the parent of button-container */
.button-group {
    display: flex;
    flex-wrap: wrap;
    margin-left: -4px;
    margin-right: -4px;
}

.button-container {
    flex-grow: 1;
    margin: 4px;
}

/* For a non-nav button-container, don't pad the far left or far right side (the containing .page already has padding) */
.button-container button {
    padding: 6px;
}

button {
	background-color:#ededed;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	border:1px solid #000;
	display:inline-block;
    cursor:pointer;
    text-decoration:none;
    -webkit-text-decoration:none;
    /* Use `min-height` because normal `height` is too restrictive for very large font sizes. */
    min-height: 2em;
    font-size: 0.8em;
}

/* Buttons move down 1px when they are clicked/touched.
 * This visually simulates the press of a physical button.
 */
button:active {
	position:relative;
	top:1px;
}

input {
    font-size: 1em;
}

button.emphasis {
    background-color:#dfdfdf;
    box-shadow: 0 0 1px 1px #000;
    border: 1px solid #000;
}

body.hasDarkMode button.emphasis {
    border-color: #000;
    box-shadow: 0 0 1px 1px #fff;
}

.button-container button {
    width: 100%;
}

.event-nav button {
    text-shadow: none;
    color: #fff;
    /* Prevent width-overflow issue with accessibility mode. */
    padding: 0;
}

.event-title {
    border-radius: 4px;
    padding: .5em;
    color: #fff;
}

/* When in accessibility mode, font-size is larger. */
body.hasAccessibility {
    font-size: 1.5rem;
}

/* On small screens (e.g., 250px wide), a font size >= `1.5 rem` may overflow
 * a few horizontal features (particularly the header and event-nav!)
 * So, use a (somewhat arbitrary) width of 500px to reduce font size a tad.
 */
 @media screen and (max-width: 500px)
 {
    body.hasAccessibility {
        font-size: 1.3rem;
    }
 }


/* When in accessibility mode, the header and event navs have much less padding. */
body.hasAccessibility .event-nav {
    padding: 8px 8px 0 8px;
}

/* Greatly reduce padding when in accessibility mode so that more
 * words fit per line. (This matches header and event-nav.)
 */
body.hasAccessibility .page {
    padding: 8px;
    max-width: 984px; /* 984px = Max-Width (1000px) - Padding-Left (8px) - Padding-Right (8px) */
}

/* For color-blind users, make links more obvious. 
 * Important: do *not* use a generic [data-uri] selector because 
 * buttons would look silly with underlined text!
 */
body.hasAccessibility span[data-uri], body.hasAccessibility li[data-uri], body.hasAccessibility a {
    text-decoration: underline dotted;
    /* The prefix "-webkit-" is needed for mobile Safari. */
    -webkit-text-decoration: underline dotted;
}

/* These weight-related CSS classes will hide or display select items. */
body.has-weight .has-weight {
    display: unset;
}

body.has-weight li.has-weight {
    display: list-item;
}

body.has-weight .no-weight {
    display: none;
}

body.no-weight .no-weight {
    display: unset;
}

body.no-weight li.no-weight {
    display: list-item;
}

body.no-weight .has-weight {
    display: none;
}

/* This rule is used on screens other than the event-drugs. 
 * In practice, `.dose-definition` is a descendent of `.has-weight`.*/
.dose-definition {
    color: #888;
    font-size: 0.8em;
}
/* ... */

